--- a/Data-Analysis.Rmd
+++ b/Data-Analysis.Rmd
@@ -140,13 +140,48 @@ This wraps up the visual overview of our data and we here found some of the para
 Here what we are trying to explain using all the other parameter levels is whether a person has AD or not. So, it is quite rational to fit a Logistic Regression Model, which has a linear decision boundary cause we see there doesn't exist too much non-linearity in the data. So, below we will go through the fitting and choosing of the Model.
 
 - We fit a Logistic Regression Model by IRLS Method of DX_bl(AD Status) on all the other variables, except ID. Below we represent the fitted model. We see **many parameters are not significant**.
-```{r fit_model_full}
+```{r fit_model_full, warning=FALSE}
 logit.AD.full <- glm(DX_bl~.-ID, data = data, family = "binomial")
 summ(logit.AD.full)
 ```
-- We fit a **smaller model using only the significant variables and choose a smaller model, given below. This is because, it will reduce variance in predictions and will be far more easier to interpret**.(Model selection is done by "both" selection, we could have done it by "forward" or "backward" selection also).
-```{r fit_model_reduced}
+- We fit a **smaller model using only the significant variables and choose a smaller model, given below. This is because, it will reduce variance in predictions and will be far more easier to interpret**.(Model selection is done by "both" selection, we could have done it by "forward" or "backward" selection also).**Our suspect of FDG, HippoNV, MMSCORE, TOTAL13 to play important role in distinguishing AD and non-AD patients seems correct**.
+```{r fit_model_reduced, warning=FALSE}
 logit.AD.sig <- step(logit.AD.full, direction = "both", trace = 0)
 summ(logit.AD.sig)
 ```
+- Comparing the 2 models above by **anova table LRT test we see no significant difference between the 2 models(p-value = 0.8569). That's why we opt to choose the reduced model**.
+```{r anova_mods}
+anova.mods <- anova(logit.AD.full, logit.AD.sig, test = "LRT")
+summary(anova.mods)
+```
+- We present the 2 fitted models below visually to see the coefficient estimates and which variables are included and which are not in the reduced model. It is quite important that **we reduced the model complexity greatly by removing 10 variables which didn't have any substantial role in explaining the AD Status**.
+```{r plot_models, fig.asp=1, fig.width=12, warning=FALSE}
+mods <- plot_summs(logit.AD.full, logit.AD.sig, model.names = c("Full Model", "Reduced Model"), ci_level = .99, plot.distributions = TRUE, rescale.distributions = TRUE) +
+  theme(legend.position = "bottom") + ggtitle("Full Model & Reduced Model")
+
+format_reg_table <- function(model, digs = 2){
+  mod <- tidy(model, conf.level = .99, conf.int = TRUE) %>%
+    mutate(across(where(is.numeric), ~ round(., digits = digs)))
+  mod <- mod %>%
+    mutate(estimate = as.character(estimate)) %>%
+    mutate(estimate = paste(paste(estimate, ifelse(p.value < 0.05, "*",""), ifelse(p.value < 0.01, "*",""), ifelse(p.value < 0.001, "*",""), sep = ""), paste("[", conf.low, ", ", conf.high, "]", sep = ""), sep = "\n"))
+  mod <- mod %>%
+    select(term, estimate)
+  return(mod)
+}
+
+mod.full.table <- format_reg_table(logit.AD.full)
+mod.sig.table <- format_reg_table(logit.AD.sig)
+
+mod.tables <- mod.full.table %>%
+  full_join(mod.sig.table, by = "term") %>%
+  rename("Full Model" = "estimate.x","Reduced Model" =  "estimate.y")
+
+mods.tab <- ggtexttable(mod.tables, theme = ttheme("mOrangeWhite"), rows= NULL) %>%
+  tab_add_title("Fitted Models", face = "bold")
+
+# Visualizing Models
+ggarrange(mods, mods.tab, ncol = 2, widths = c(7,3))
+```
+- We Now look at how our models perform and how well it fits the data.
 
